# sisyphus

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CURRENT_STATUS.md  README.md  package-lock.json  package.json  pyproject.toml
.agents/skills/source-command-sisyphus-restart-backend/: SKILL.md
.claude/: launch.json  settings.local.json
.claude/commands/: sisyphus-restart-backend.md
.sisyphus/: boulder.json
.sisyphus/drafts/: audio-optimization.md
.sisyphus/notepads/audio-optimization-refactor/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: audio-optimization-refactor.md
app/: config.py  connectivity.py  edge_tts_services.py  language_map.py  latency.py  local_services.py  minimax_tts_services.py  minimax_voices.json  mlx_services.py  model_lab_preview.py  model_presets.py  model_providers.py  model_settings.py  openrouter_services.py  pipeline.py  server.py  voice_library.py  voxcpm_tts_services.py  zhipu_services.py
app/model_adapters/: __init__.py  manifest.py  transport.py
app/model_adapters/specs/: cloud_speech.json  cloud_text.json  cloud_transcription.json  omlx_nemotron_asr.json  omlx_qwen3_5.json  omlx_qwen3_asr.json  omlx_voxcpm2.json
app/static/: index.html
client/: index.html  package-lock.json  package.json
client/.storybook/: preview.ts
client/src/: App.module.css  App.tsx  main.tsx
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/data/: languages.ts
client/src/design-system/components/AudioLevelMeter/: AudioLevelMeter.module.css  AudioLevelMeter.stories.tsx  AudioLevelMeter.tsx  index.ts
client/src/design-system/components/ConnectButton/: ConnectButton.stories.tsx  ConnectButton.tsx
client/src/design-system/components/ConnectionStatusBadge/: ConnectionStatusBadge.stories.tsx  ConnectionStatusBadge.tsx  index.ts
client/src/design-system/components/DirectionChip/: DirectionChip.stories.tsx  DirectionChip.tsx  index.ts
client/src/design-system/components/EmptyState/: EmptyState.module.css  EmptyState.stories.tsx  (+1 more)
client/src/design-system/fonts/: fonts.css
client/src/design-system/global/: reset.css
client/src/design-system/primitives/: index.ts
client/src/design-system/tokens/: index.ts  tokens.css  tokens.ts
client/src/hooks/: index.ts  useLocalEngine.ts  useMicLevel.ts  useModelLab.ts  useModelProviders.ts  useModelSettings.ts  useTranslatorConnection.ts  useTranslatorConnection.types.ts  useWavRecorder.ts
client/src/settings/: serverAddress.ts
docs/: ENV_CONFIGURATION.md  SOLUTION_UPGRADE.md
docs/cartesia/: initial-message.txt  system-prompt.md
docs/minimax/voice-capability-1784391256/: README.md  manifest.json
docs/minimax/voice-capability-1784391256/smoke/: curl.sh  http.py
docs/openrouter/voice-capability-1784453184/: README.md  manifest.json
docs/openrouter/voice-capability-1784453184/assets/: input.webm
docs/openrouter/voice-capability-1784453184/smoke/: curl.sh
docs/superpowers/plans/: 2026-07-04-assemblyai-stt.md  2026-07-12-pipeline-latency-phase-1.md  2026-07-17-model-lab-v2.md
docs/superpowers/specs/: 2026-07-12-pipeline-latency-phase-1-design.md  2026-07-17-model-lab-v2-design.md
docs/zhipu/voice-capability-1784645068/: README.md  manifest.json
docs/zhipu/voice-capability-1784645068/assets/: input.webm
docs/zhipu/voice-capability-1784645068/smoke/: curl.sh
inference/: README.md  asr_service.py  llm_client_example.py  models.yaml  requirements-asr.txt  requirements-tts.txt  requirements.txt  run_asr.py  run_inference.py  start_both.bat  test_asr.py  test_tts.py  tts_service.py
legacy/: PROJECT_CURRENT_STATUS.md  README.md  README_OLD.md
legacy/docs/: MODELS.md
legacy/inference/: asr_service.py  run_inference.py  run_tts.py  voice_manager.py
legacy/src-tauri/src/: lib.rs
legacy/src-tauri/src/audio/: asr_session.rs  capture.rs  playback.rs
legacy/src-tauri/src/llm/: client.rs
legacy/src/components/: VoiceAssistant.tsx  voiceStore.ts
scripts/: dev.sh  restart-backend.sh  start.sh  stop.sh
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/audio/: capture.rs  capture_processor.rs  mod.rs  playback.rs  playback_processor.rs  resampler.rs  state.rs  vad.rs
src-tauri/src/conversation/: mod.rs  state.rs
src-tauri/src/inference/: client.rs  mod.rs
src-tauri/src/llm/: client.rs  mod.rs
src-tauri/src/pipeline/: frames.rs  mod.rs  orchestrator.rs  processor.rs
src/components/: VoiceAssistant.tsx
tests/: test_assemblyai_provider.py  test_cartesia_provider.py  test_edge_tts_services.py  test_latency_observer.py  test_semantic_buffer.py  test_translation_transcript_tap.py  test_voxcpm2_cuda_tts.py
(+64 files in other folders)
